fixed buttons overflow bottom border && vertical align

--- a/src/components/category/category.scss
+++ b/src/components/category/category.scss
@@ -37,6 +37,8 @@
 .items__row {
   width: 25%;
   display: inline-block;
+  vertical-align: top;
+  
 }
 
 @media (max-width: 1024px) {
