--- a/src/components/item-buttons/item-buttons.scss
+++ b/src/components/item-buttons/item-buttons.scss
@@ -2,6 +2,7 @@
   margin-top: 13px;
   display: flex;
   justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 .item__buttons > div {
