--- a/src/components/item/item.scss
+++ b/src/components/item/item.scss
@@ -35,8 +35,7 @@
   .item {
     margin: 10px;
     padding: 13px 10px; 
-    min-height: 0;
-    height: 321px;
+    min-height: 321px;
   }
   .item__image {
     /*setted inline: "backgroundImage: `url(${mediaCollection[0].thumbUrl})`" */
@@ -54,7 +53,7 @@
 
 @media (max-width: 375px) {
   .item {
-    height: 264px;
+    min-height: 264px;
     margin: 5px;
   }
   .item__image {
